<resources>
    <string name="id_vkontakte">2800844</string>
    <string name="id_instagram">2fb9e23aa3e740639d0d9e1479f011fc</string>
    <string name="id_facebook">1414152868808243</string>
    <string name="str_15x10cm_single_side">15x10cm single side</string>
    <string name="str_15x10cm_double_side">15x10cm double side</string>
    <string name="str_21x10cm_double_side">21x10cm double side</string>
    <string name="str_bil_key1">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAn44wEs4nZQDBiIwFVabQ</string>
    <string name="str_bil_key2">j/iW5+6QL1+BNj18bo1aNCLP1Ck0IR2oUn4WZ+ZpaOe8MPFrzED2hEcgOMqsw5S514qqDQ+t+lPqH6E5bxfQKFt43xhOLRbhwZXmIMhHUpPhVZBPNX+T/</string>
    <string name="str_bil_key3">EFu2LlLBPPIi/aMGy1m8O3sgxSNCJOSfwA7C9A9IL/pZGsr24k9AjZ7rUvzdKGQjDW4sW0rrsZdB4RYQFN5/77wXuNB5HgzxkMyTFPqRTBKmuS</string>
    <string name="str_bil_key4">ki3aQ1VGqMWn9nZGMGjUEYjKJyuIBZwNxmmpjYiDw+eMaZEe3NOzw3Q+VSncYge7OcVSPa8C5+BFDKAcE8fJnxo59QDA/1wIDAQAB</string>
    <string name="app_name">FastCards</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="action_settings">Settings</string>
    <string name="str_projects">Projects</string>
    <string name="str_no_network_connection">No network connection</string>
    <string name="str_select_item">Select</string>
    <string name="str_send">Send</string>
    <string name="str_postcards">Postcards</string>
    <string name="str_manager">Manager</string>
    <string name="input">Input your text</string>
    <string name="appeal">Appeal</string>
    <string name="signature">Signature</string>
    <string name="sign_please">Sign please</string>
    <string name="str_send_myself">Send yoursеlf</string>
    <string name="str_recipients">recipients</string>
    <string name="str_bought">Bought</string>
    <string name="recently_used">Recently used</string>
    <string name="recipient">Recipient</string>
    <string name="search_title">Search</string>
    <string name="str_error_recipients_list_empty">Recipients list is empty</string>
    <string name="card_store">Store</string>
    <string name="projects">Projects</string>
    <string name="str_profile">Profile</string>
    <string name="str_selection">Selection</string>
    <string name="str_selections">Selections</string>
    <string name="str_purchases">Purchases</string>
    <string name="str_search">Search</string>
    <string name="str_categories">Categories</string>
    <string name="str_new">New</string>
    <string name="str_offer">Special Offers </string>
    <string name="str_top_sellers">Top Sellers</string>
    <string name="str_search_hint">Search contacts</string>
    <string name="themes">Themes</string>
    <string name="texts">Texts</string>
    <string name="search_cancelled">No search results</string>
    <string name="my_events">My events</string>
    <string name="social_networks">Social networks</string>
    <string name="my_notifications">My Notifications</string>
    <string name="settings">Settings</string>
    <string name="my_wallet">Wallet</string>
    <string name="my_events_activity">My events</string>
    <string name="my_events_description">Your personal events are marked yellow in the event list </string>
    <string name="empty_event_list">You don\'t have events</string>
    <string name="my_social_networks_description">App requires access to your personal information and contacts</string>
    <string name="social_network_activity">Social networks</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_save_project_title">Saving project</string>
    <string name="str_save_project_message">Please enter project name</string>
    <string name="finish_dialog_message">Are you shure you want to leave without saving?</string>
    <string name="connecting">Please, wait&#8230; Connecting to server</string>
    <string name="load_previevs">Please, wait&#8230; Loading previews</string>
    <string name="server_connecting_error">Connecting server error</string>
    <string name="str_this_week">UPCOMING WEEK</string>
    <string name="str_this_month">UPCOMING MONTH</string>
    <string name="str_users">Recipients</string>
    <string name="str_wallet">Wallet</string>
    <string name="in_you_purse">You have </string>
    <string name="credit">stars. </string>
    <string name="want_to_recharge">Do you want to get more?</string>
    <string name="wallet_replenishment">Get more stars</string>
    <string name="select_number_of_credits">Choose the amount of stars you want to get</string>
    <string name="whithout_appeal">No Courtesy-title</string>
    <string name="str_transaction_failed">Transaction failed</string>
    <string name="title_events_activity">Events</string>
    <string name="title_shop_activity">Select postcard</string>
    <string name="str_dont_forget">Don\'t forget</string>
    <string name="title_activity_editor">Editor</string>
    <string name="greeting_texts">Greeting Messages</string>
    <string name="str_new_event">New event</string>
    <string name="str_event_name">Event name</string>
    <string name="str_category">Category</string>
    <string name="str_date">Date</string>
    <string name="str_push">Reminder</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_add">Add</string>
    <string name="str_actions">Actions!</string>
    <string name="str_delete">Delete</string>
    <string name="str_recipient">Recipient</string>
    <string name="str_buy">Buy</string>
    <string name="str_ok">OK</string>
    <string name="str_choose">Select</string>
    <string name="str_edit">Edit</string>
    <string name="vertical_description">Sends this card to friends from your contacts. Write the wishes and sign it up</string>
    <string name="square_description">This card is sized perfectly for social networks</string>
    <string name="print_description">Two-sided card for printing</string>
    <string name="title_activity_manager">Manager</string>
    <string name="title_manage_event_activity">Edit event</string>
    <string name="title_theme_selector_activity">Choose postcard</string>
    <string name="title_postcard_sender_activity">Sending postcards</string>
    <string name="title_finish_sending_activity">Sent</string>
    <string name="title_contacts_manager_activity">Contacts</string>
    <string name="title_projects_manager_activity">Projects</string>
    <string name="title_manage_group_activity">Edit group</string>
    <string name="title_choose_group_activity">Select group</string>
    <string name="title_editor_activity">Editor</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_my_events">My Events</string>
    <string name="title_activity_social_network">Social Networks</string>
    <string name="title_select_contacts_activity">Select contacts</string>
    <string name="title_manage_contacts_activity">Manage contacts</string>
    <string name="title_selector_activity">Select contacts</string>
    <string name="title_post_social_activity">Sending</string>
    <string name="title_print_activity">Sending</string>
    <string name="title_main_shop_activity">Store</string>
    <string name="title_recipients_selector_activity">Contacts</string>
    <string name="title_stars_shop_activity">Get more stars</string>
    <string name="title_preview_list_activity">List contacts</string>
    <string name="str_send_later">Send later</string>
    <string name="str_save">Save</string>
    <string name="str_cards_ready">cards ready to be sent</string>
    <string name="str_empty_projects_error">No projects saved</string>
    <string name="str_contacts">Contacts</string>
    <string name="str_lists">Lists</string>
    <string name="str_send_done">Sent</string>
    <string name="str_send_done_additional">will get your cards</string>
    <string name="str_hint_save_group">You can save this contact list for later use</string>
    <string name="str_hint_tell_friend">Tell your friends about this app and get more stars</string>
    <string name="str_tell">Tell</string>
    <string name="str_save_group_title">Saving list</string>
    <string name="str_save_group_message">Please enter list name</string>
    <string name="str_join_contacts">Unite with&#8230;</string>
    <string name="str_action_join_contacts">Unite</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_done">Done</string>
    <string name="str_hint_group_name">Group name</string>
    <string name="str_error_enter_gr_name">Enter group name please</string>
    <string name="str_error_enter_pr_name">Failed. Invalid project name</string>
    <string name="str_show">Show</string>
    <string name="str_progress_sending_title">Sending postcards</string>
    <string name="str_progress_sending_body">Please wait while sending your postcards</string>
    <string name="str_loading_title">Loading</string>
    <string name="str_loading_stars_body">FastCards connecting server&#8230;</string>
    <string name="str_vkontakte">Vkontakte</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_title_log_in">Log in</string>
    <string name="str_title_log_out">Log out</string>
    <string name="str_not_synced">Not synced</string>
    <string name="str_logged_in">Logged in</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="print_or_save">You can print the postcard or export it to external applicatoin</string>
    <string name="input_filename">Enter postcard\'s name</string>
    <string name="post_instagram">Post to Instagram</string>
    <string name="post_twitter">Post to Twitter</string>
    <string name="str_on">ON</string>
    <string name="str_off">OFF</string>
    <string name="str_post_vk">Post to Vkontakte</string>
    <string name="str_post_fb">Post to Facebook</string>
    <string name="str_authorize">Authorize</string>
    <string name="str_calendar">Calendar</string>
<string name="project">Project</string>
    <string name="str_saved">saved</string>
    <string name="str_save_project">Saving project</string>
        <string name="loading_events">Please, wait&#8230; Loading events</string>
    <string name="loading_postcards">Please, wait&#8230; Loading postcards</string>
    <string name="loading_categories">Please, wait&#8230; Loading categories</string>
    <string name="str_transaction_success">Transaction success</string>
    <string name="str_import_start">Import start&#8230;</string>
     <string name="str_not_star_error">Не достаточно средств;</string>
       <string name="str_auth_vk">Authorize in Vkontakte</string>
    <string name="str_auth_fb">Authorize in Facebook</string>
    <string name="str_soc_net_not_choosed">Social network is not choosed</string>
    <string name="str_auth_sn_to_sendyourself">You need to login to be able to post on your wall</string>
    <string name="str_star_one">star</string>
    <string name="str_star_end_one">stars</string>
    <string name="str_star_end_two">stars</string>
    <string name="str_star_end_five">stars</string>
    <string name="str_log_out_title">Log out.</string>
    <string name="str_please_wait">Please wait&#8230;</string>
    <string name="str_list_is_empty">List is empty</string>
    <string name="str_input_name">Please, enter the file name </string>
    <string name="str_not_correct_name">Invalid file name </string>
    <string name="title_loading_dialog">Please wait</string>
    <string name="str_loading_contacts">Loading contacts</string>
    <string name="str_save_list">Save list</string>
    <string name="str_error_sending_mms">Sending MMS failed. Check your network connection</string>
    <string name="str_error_choose_category">Choose category</string>
        <string name="str_catalog">Catalog</string>
    <string name="str_bundles">Bundles</string>
</resources>