<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search_menu"
        android:icon="@drawable/btn_search_white"
        android:title="@string/str_search"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        yourapp:showAsAction="always|collapseActionView">
    </item>
    <item
        android:id="@+id/action_join"
        android:showAsAction="always"
        android:title="@string/str_action_join_contacts"
        android:visible="false"
        yourapp:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_done"
        android:showAsAction="always"
        android:title="@string/str_done"
        android:visible="false"
        yourapp:showAsAction="always">
    </item>

</menu>