<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	android:gravity="center"
    	android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_wallet"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:textColor="@android:color/black"
        	android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/in_you_purse" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_substrate" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        		android:textColor="@color/text_event_orange"
        		android:textAppearance="?android:attr/textAppearanceSmall"
        		android:textStyle="bold"
                android:layout_gravity="center" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:textColor="@android:color/black"
        	android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/want_to_recharge" />

</LinearLayout>
</LinearLayout>
