<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fr_send_postcards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_icon_stamp" >

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:minLines="2"
            android:text="@string/str_cards_ready"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_green"
            android:padding="5dp"
            android:text="@string/str_send"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_white"
            android:padding="5dp"
            android:text="@string/str_save"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" 
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</RelativeLayout>