<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/selection"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/selector_btn_1screen" />

        <ImageButton
            android:id="@+id/catalog"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/selector_btn_catalog" />        
            
        <ImageButton
            android:id="@+id/purchase"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/selector_btn_purchases" />
        
        <ImageButton
            android:id="@+id/bundle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/selector_btn_bundle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/selection_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_selection"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/white" />

          <TextView
            android:id="@+id/catalog_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_catalog"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/white" />
                   
           <TextView
            android:id="@+id/purchase_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_purchases"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bundle_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_bundles"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>