<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <FrameLayout
 				android:id="@+id/banner_pager"  
 				android:layout_width="match_parent"              
 				android:layout_height="90dp"
 				android:layout_margin="5dp"   
                android:layout_weight="1">
			</FrameLayout>
			
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1" >
                
                <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textColor="@color/text_orange"
                 android:gravity="center"
                 android:text="@string/str_new" />
                
                <FrameLayout
                 android:id="@+id/fragment_novel" 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                    
            </FrameLayout>
           </LinearLayout>         
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1" >
                
            	<TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textColor="@color/text_orange"
                 android:gravity="center"
                 android:text="@string/str_offer" />
                
             	<FrameLayout 
                 android:id="@+id/fragment_actions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                    
            </FrameLayout>
             </LinearLayout>       
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1" >
                
            	<TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textColor="@color/text_orange"
                 android:gravity="center"
                 android:text="@string/str_top_sellers" />
                
             	<FrameLayout 
                 android:id="@+id/fragment_leaders"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                    
            </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        
        </ScrollView>
