<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_btn_create"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:onClick="onPostCardButtonClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_postcards"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_btn_manager"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:onClick="onCalendarButtonClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_calendar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_orange" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="0dip"
        android:layout_weight="0.2" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/str_new"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_orange" />

        <LinearLayout
            android:id="@+id/ll_fragment_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_vertical">"
    </LinearLayout>
   </LinearLayout>

</LinearLayout>